[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Escape.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cutscenes/Escape/order4end.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cutscenes/Escape/escapeNews.png" type="Texture" id=3]
[ext_resource path="res://Fonts/LACONIC_REGULAR.OTF" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/Cutscenes/Escape/escape_BG.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Cutscenes/Escape/escapeMask.png" type="Texture" id=6]
[ext_resource path="res://Shaders/BlurScreen.gdshader" type="Shader" id=7]
[ext_resource path="res://Sounds/newspap1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Sounds/escapeCrawl.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sounds/escapeAmb.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=7]
resource_name = "BackMove"
length = 9.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4.5, 6, 7.5, 9 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 0.834, 0.834 ), Vector2( 0.889333, 0.889333 ), Vector2( 0.944667, 0.944667 ), Vector2( 1, 1 ), Vector2( 1.06667, 1.06667 ), Vector2( 1.13333, 1.13333 ), Vector2( 1.2, 1.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.5, 2.3, 3, 3.8, 4.5, 5.3, 6, 6.8, 7.5, 8.3, 9 ),
"transitions": PoolRealArray( -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, -2, 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ), Vector2( 965.644, 560 ), Vector2( 970, 540 ), Vector2( 981.289, 560 ), Vector2( 990, 540 ), Vector2( 1001.29, 560 ), Vector2( 1010, 540 ), Vector2( 1021.29, 560 ), Vector2( 1030, 540 ), Vector2( 1041.29, 560 ), Vector2( 1050, 540 ), Vector2( 1061.29, 560 ), Vector2( 1070, 540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 5.5, 9 ),
"transitions": PoolRealArray( 0, 2, 1 ),
"update": 0,
"values": [ -4.0, -4.0, -80.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.834, 0.834 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 960, 540 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -4.0 ]
}

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 7 )
shader_param/lod = 0.0

[sub_resource type="DynamicFont" id=4]
size = 48
outline_size = 3
outline_color = Color( 0, 0, 0, 0.705882 )
extra_spacing_char = 3
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=5]
resource_name = "NewsIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BackCover:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BackCover:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FadeDone"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../BlurRect:material:shader_param/lod")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 4.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../BlurRect:material:shader_param/lod")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Escape" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 480, 270 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="BackHide" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="BackSprite" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 0.834, 0.834 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BackSprite"]
autoplay = "BackMove"
anims/BackMove = SubResource( 7 )
anims/RESET = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="BackSprite"]
stream = ExtResource( 9 )
volume_db = -4.0
autoplay = true

[node name="BackCover" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 6.10352e-05
margin_right = 960.0
margin_bottom = 544.0
color = Color( 0, 0, 0, 1 )

[node name="MaskFred" type="Sprite" parent="."]
position = Vector2( 480, 270 )
texture = ExtResource( 6 )

[node name="BlurRect" type="ColorRect" parent="."]
material = SubResource( 9 )
margin_right = 960.0
margin_bottom = 544.0
mouse_filter = 2

[node name="NewsSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 480, 270 )
texture = ExtResource( 3 )

[node name="WinLabel" type="Label" parent="NewsSprite"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -287.0
margin_top = -118.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.2, 0.184314, 0.129412, 1 )
custom_fonts/font = SubResource( 4 )
text = "THE END"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewsSprite"]
anims/NewsIn = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="NewsSprite"]
stream = ExtResource( 8 )
volume_db = -6.0

[node name="FadeRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 960.0
margin_bottom = 544.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeRect"]
anims/FadeIn = SubResource( 1 )
anims/FadeOut = SubResource( 3 )
anims/RESET = SubResource( 2 )

[node name="EscapeAmb" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -8.0
autoplay = true
